--- a/Draw/ZhaJinHua/Controller/ZJHGameController~ipad.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHGameController~ipad.xib
@@ -482,11 +482,11 @@
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="308283647">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="505722313">
 							<int key="type">2</int>
 							<double key="pointSize">22</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="473263697">
+						<object class="NSFont" key="IBUIFont" id="1054625979">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">22</double>
 							<int key="NSfFlags">16</int>
@@ -539,8 +539,8 @@
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="308283647"/>
-						<reference key="IBUIFont" ref="473263697"/>
+						<reference key="IBUIFontDescription" ref="505722313"/>
+						<reference key="IBUIFont" ref="1054625979"/>
 					</object>
 					<object class="IBUIView" id="194040692">
 						<reference key="NSNextResponder" ref="483638841"/>
@@ -597,12 +597,22 @@
 						<int key="IBUITag">2000</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUILabel" id="513486946">
+					<object class="IBUIImageView" id="762507806">
 						<reference key="NSNextResponder" ref="483638841"/>
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{511, 681}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
-						<reference key="NSNextKeyView" ref="314304568"/>
+						<reference key="NSNextKeyView" ref="520582656"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
+					<object class="IBUILabel" id="520582656">
+						<reference key="NSNextResponder" ref="483638841"/>
+						<int key="NSvFlags">-2147483356</int>
+						<string key="NSFrame">{{511, 681}, {50, 50}}</string>
+						<reference key="NSSuperview" ref="483638841"/>
+						<reference key="NSNextKeyView" ref="675463111"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -636,7 +646,7 @@
 						<int key="NSvFlags">-2147483347</int>
 						<string key="NSFrame">{{503, 726}, {100, 35}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
-						<reference key="NSNextKeyView" ref="675463111"/>
+						<reference key="NSNextKeyView" ref="762507806"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">3000</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -837,7 +847,7 @@
 						<int key="NSvFlags">-2147483347</int>
 						<string key="NSFrame">{{361, 482.5}, {46, 39}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
-						<reference key="NSNextKeyView" ref="513486946"/>
+						<reference key="NSNextKeyView" ref="314304568"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -978,14 +988,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">moneyTree</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="107431730"/>
-					</object>
-					<int key="connectionID">3879</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">totalBetBgImageView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="307831003"/>
@@ -1052,7 +1054,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cardTypeLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="513486946"/>
+						<reference key="destination" ref="520582656"/>
 					</object>
 					<int key="connectionID">3893</int>
 				</object>
@@ -1063,6 +1065,14 @@
 						<reference key="destination" ref="636923254"/>
 					</object>
 					<int key="connectionID">3894</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">cardTypeBgImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="762507806"/>
+					</object>
+					<int key="connectionID">3896</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1241,7 +1251,8 @@
 							<reference ref="241251516"/>
 							<reference ref="107431730"/>
 							<reference ref="316893186"/>
-							<reference ref="513486946"/>
+							<reference ref="520582656"/>
+							<reference ref="762507806"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1479,7 +1490,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3892</int>
-						<reference key="object" ref="513486946"/>
+						<reference key="object" ref="520582656"/>
+						<reference key="parent" ref="483638841"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">3895</int>
+						<reference key="object" ref="762507806"/>
 						<reference key="parent" ref="483638841"/>
 					</object>
 				</array>
@@ -1533,6 +1549,7 @@
 				<string key="3863.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3892.CustomClassName">FXLabel</string>
 				<string key="3892.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="3895.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="43.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="56.CustomClassName">FXLabel</string>
@@ -1553,7 +1570,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">3894</int>
+			<int key="maxID">3896</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
