--- a/Draw/ZhaJinHua/Controller/ZJHRoomListController.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHRoomListController.xib
@@ -38,11 +38,12 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="619692330">
+					<object class="IBUIImageView" id="929830684">
 						<reference key="NSNextResponder" ref="25482459"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="151090419"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -53,6 +54,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 25}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="503601785"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="809841870">
@@ -67,6 +69,7 @@
 						<int key="NSvFlags">308</int>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="657076153"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -81,6 +84,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 47}, {325, 353}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="703224615"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -101,6 +105,7 @@
 						<int key="NSvFlags">269</int>
 						<string key="NSFrame">{{15, 416}, {141, 37}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="762222889"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -133,6 +138,7 @@
 						<int key="NSvFlags">269</int>
 						<string key="NSFrame">{{164, 416}, {142, 37}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -151,6 +157,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 7}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="398906862"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -182,6 +189,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{285, 7}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="370940758"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -206,6 +214,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{72, 2}, {181, 37}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="39528972"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -214,10 +223,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">欢乐大话骰</string>
 						<reference key="IBUIHighlightedTitleColor" ref="55663291"/>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
+						<reference key="IBUINormalTitleColor" ref="55663291"/>
 						<reference key="IBUINormalTitleShadowColor" ref="993983616"/>
 						<reference key="IBUIFontDescription" ref="109948176"/>
 						<reference key="IBUIFont" ref="847363495"/>
@@ -227,6 +233,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{72, 53}, {90, 29}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="407714080"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -254,6 +261,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{162, 53}, {90, 29}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="143734441"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -280,6 +288,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{210, 53}, {90, 29}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="114032252"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -299,6 +308,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{285, 52}, {30, 29}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="606315056"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -323,6 +333,7 @@
 						<int key="NSvFlags">-2147483331</int>
 						<string key="NSFrame">{{79, 90}, {163, 40}}</string>
 						<reference key="NSSuperview" ref="25482459"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="810150406"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -349,7 +360,8 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="619692330"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="929830684"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -447,7 +459,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">backgroundImageView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="619692330"/>
+						<reference key="destination" ref="929830684"/>
 					</object>
 					<int key="connectionID">35</int>
 				</object>
@@ -540,7 +552,7 @@
 							<reference ref="370940758"/>
 							<reference ref="657076153"/>
 							<reference ref="398906862"/>
-							<reference ref="619692330"/>
+							<reference ref="929830684"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -611,7 +623,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">34</int>
-						<reference key="object" ref="619692330"/>
+						<reference key="object" ref="929830684"/>
 						<reference key="parent" ref="25482459"/>
 					</object>
 				</array>
@@ -648,7 +660,99 @@
 			<nil key="sourceID"/>
 			<int key="maxID">35</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonRoomListController</string>
+					<string key="superclassName">PPTableViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonRoomListController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PPTableViewController</string>
+					<string key="superclassName">PPViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPTableViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ZJHRoomListController</string>
+					<string key="superclassName">CommonRoomListController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="allRoomButton">UIButton</string>
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="createRoomButton">UIGlossyButton</string>
+						<string key="emptyListTips">UILabel</string>
+						<string key="fastEntryButton">UIGlossyButton</string>
+						<string key="friendRoomButton">UIButton</string>
+						<string key="helpButton">UIButton</string>
+						<string key="nearByRoomButton">UIButton</string>
+						<string key="titleFontButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="allRoomButton">
+							<string key="name">allRoomButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="createRoomButton">
+							<string key="name">createRoomButton</string>
+							<string key="candidateClassName">UIGlossyButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="emptyListTips">
+							<string key="name">emptyListTips</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="fastEntryButton">
+							<string key="name">fastEntryButton</string>
+							<string key="candidateClassName">UIGlossyButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="friendRoomButton">
+							<string key="name">friendRoomButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="helpButton">
+							<string key="name">helpButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nearByRoomButton">
+							<string key="name">nearByRoomButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleFontButton">
+							<string key="name">titleFontButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ZJHRoomListController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
